# piepi

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yaml
piepi/: apps.py  asgi.py  main.py  models.py  settings.py  settings_docker.py  urls.py  wsgi.py  wsgi_docker.py
piepi/migrations/: 0001_initial.py
server/: apps.py  main.py  models.py  upload.py
server/migrations/: 0001_initial.py
